--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MobilePatientTracker</string>
+    <string name="gcm_send_message">Hello ;)))))))</string>
+    <string name="gcm_send_message_desc">this is a channel i think</string>
 </resources>
